# JLC

./: .gitattributes  .gitignore  Algorithm_FLOP_results  BENCHMARKS.md  DebugHess.java  JNI_CPP_LIBRARY_PROPOSAL.md  Jenkinsfile  LICENSE  README.md  REPORT_GEMM_PES.md  TODO_PHASE6.md  autotune_output_full.txt  build.gradle  compile_test.sh  comprehensive_performance_results.csv  consolidated_gemm_pes.csv  content.txt  content_opt.txt  debug_givens_qr.java  debug_matrix_diag.json  debug_output.json  gradle.properties  last_diag.json  payload.json  phase_output.txt  run_build_and_tests.ps1  run_caqr_tune.ps1  start-dev.ps1  stop-dev.ps1  thread_dump_44540.txt
.github/prompts/: ask-opus.prompt.md
frontend/: index.html  package-lock.json  package.json  tailwind.config.cjs  tailwind.config.js  vite.config.js
frontend/src/: ARCHITECTURE.md  App.jsx  index.css  main.jsx
frontend/src/components/: Header.jsx  MatrixHeader.jsx  MatrixInput.jsx  MatrixResults.jsx  MatrixSidebar.jsx  Sidebar.jsx
frontend/src/components/features/: FeatureCard.jsx  FeatureGrid.jsx  index.js
frontend/src/components/layout/: MatrixAnalysisLayout.jsx  MatrixTabs.jsx
frontend/src/components/matrix/: ComplexMatrixDisplay.jsx  MatrixActionBar.jsx  MatrixActions.jsx  MatrixCell.jsx  MatrixDimensionControl.jsx  MatrixDisplay.jsx  MatrixGrid.jsx  MatrixInputCard.jsx  MatrixLatex.jsx  index.js
frontend/src/components/results/: Breadcrumb.jsx  PropertyCard.jsx  SpectrumMap.jsx  SummaryItem.jsx  index.js
frontend/src/components/ui/: AccuracyBadge.jsx  Badge.jsx  Button.jsx  DecompositionDetailModal.jsx  FavoriteModal.jsx  IconButton.jsx  Latex.jsx  Logo.jsx  NumberInput.jsx  SearchBar.jsx  UserAvatar.jsx  index.js
frontend/src/context/: SettingsContext.jsx  ThemeContext.jsx
frontend/src/hooks/: index.js  useDiagnostics.js  useFavorites.js  useMatrix.js  useMatrixAnimation.js  useMatrixCompute.js  usePrecisionUpdate.js
frontend/src/pages/: DocumentationPage.jsx  FavoritesPage.jsx  HistoryPage.jsx  MainPage.jsx  MatrixBasicPage.jsx  MatrixDecomposePage.jsx  MatrixPage.jsx  MatrixReportPage.jsx  MatrixSpectralPage.jsx  MatrixStructurePage.jsx  RecentPage.jsx  SettingsPage.jsx
frontend/src/utils/: accuracySeverity.js  apiHeaders.js  contact.js  debugLogger.js  diagnostics.js  format.js  matrixInput.js  matrixOperations.js  navigation.js  spectralSeverity.js
frontend/tests/: browser-stress.html  browser-worker.js
native-backend/: CMakeLists.txt  PERFORMANCE_NOTES.md
native-backend/src/main/cpp/api/: jlc_native.h  jlc_status.h
native-backend/src/main/cpp/bench/: gemm_sweep.cpp
native-backend/src/main/cpp/jni/: jlc_native_Jni.cpp
native-backend/src/main/cpp/kernels/: bidiagonal.cpp  gemm.cpp  lapack_factorizations.cpp  lapack_hessenberg.cpp
scripts/: parse_gemm_sweep.ps1  quick_perf_check.ps1  run_caqr_bench.ps1  run_caqr_bench.sh  run_caqr_tuning.ps1  run_caqr_tuning_p64.ps1  run_caqr_tuning_remaining.ps1  run_dense_gemm_sweep.ps1  run_fine_gemm_sweep.ps1  run_gemm_kernel_analysis.ps1  run_gemm_refine_and_caqr.ps1  run_gemm_tuning.ps1  run_perf_benchmark.ps1  run_refine_sweep.ps1  run_roofline_sweep.ps1  run_selected_tests.ps1  run_tests.ps1  show_caqr_gemm_timers.ps1  test_benchmark_endpoint.ps1  test_normalize.js  use_frontend_env.ps1
src/: Complex.java  Field.java  Integer.java  IntegerField.java  Irrational.java  IrrationalField.java  Main.java  Natural.java  Rational.java  RationalField.java  Real.java  Ring.java  SquareRoot.java
src/linear/: Matrix.java  Set.java  Vector.java
src/main/java/net/faulj/autotune/: AutotuneDemo.java
src/main/java/net/faulj/bench/: BackendComparisonSupport.java  BenchmarkService.java  BidiagonalBackendComparisonRunner.java  CholeskyBackendComparisonRunner.java  Diagnostic512Runner.java  FlopRunnerMain.java  Gemm512BenchmarkRunner.java  GemmBackendComparisonRunner.java  HessenbergBackendComparisonRunner.java  LuBackendComparisonRunner.java  NativeGemmSweepRunner.java  PolarBackendComparisonRunner.java  QrBackendComparisonRunner.java  RunCAQRMicrobench.java  RunCAQRPerf.java  SchurBackendComparisonRunner.java  StartupBenchmarkRunner.java  SvdBackendComparisonRunner.java  TestGemm.java  TestPerfTimers.java
src/main/java/net/faulj/benchmark/: BenchmarkQRHess.java
src/main/java/net/faulj/compute/: BLAS3Kernels.java  BlockedMultiply.java  CudaContext.java  CudaGemm.java  CudaSupport.java  DecompositionPolicy.java  DispatchPolicy.java  GemmDispatch.java  GemmWorkspace.java  MicroKernel.java  OptimizedBLAS3.java  PackingUtils.java  RuntimeProfile.java  SpecializedKernels.java  VectorSupport.java
src/main/resources/: application.properties
src/number/: Constants.java  Field.java  Integer.java  Irrational.java  Main.java  Rational.java  Ring.java  SquareRoot.java
src/polynomial/: RationalPolynomial.java
tools/: BidiagRunner.java  concurrent_benchmark.js  ingest_2048_run.py  load-generator.js  load_test.js  plot_gemm_pes.py  run_benchmark.js  run_benchmark_1000.ps1  visualize_performance.py
tools/bench/: BenchQRSchur.java  Decomp512Benchmark.java
tools/flop_bench/: README.md  bench.cpp  bench_cuda.cu  bench_novec  bench_vec  flop_report.html  run_bench.py
tools/gemm_analysis/: README.md  plot_gemm_analysis.py
(+303 files in other folders)
